feat: remove cTRNG services
