# gateway/src/types.rs
@@ -1,4 +1,3 @@
-use crate::structures::service::ServiceResult;
 use thiserror::Error;
 
 #[derive(Error, Debug, Clone)]
@@ -7,12 +6,8 @@ pub enum GatewayError {
     BadRequest(String),
     #[error("Internal error: {0}")]
     InternalError(String),
-    #[error("Service timeout")]
-    ServiceTimeout,
     #[error("Service connection failed: {0}")]
     ServiceConnectionError(String),
-    #[error("Service not found: {0}")]
-    ServiceNotFoundError(String),
     #[error("Missing Authorization header")]
     NoAuthHeaderError,
     #[error("Invalid Authorization header")]
@@ -35,76 +30,4 @@ pub enum GatewayError {
     AccountPluginUnavailable(String),
     #[error("Error while waiting for termination signal: {0}")]
     TerminationError(String),
-    #[error("Invalid encryption key")]
-    InvalidEncryptionKey,
-    #[error("Invalid encryption scheme: {0}")]
-    InvalidEncryptionScheme(String),
-}
-
-/// A trait representing a service that can handle service requests.
-pub trait ServiceHandler {
-    #[allow(async_fn_in_trait)]
-    async fn handle(&mut self, svc_req: ServiceRequest) -> Result<ServiceResponse, GatewayError>;
-}
-
-/// ServiceRequest is an internal struct that represents a request to a service.
-/// The gateway will process http requests by forming the corresponding ServiceRequest
-/// object. The ServiceRequest will be sent to the service manager that will route it to the
-/// appropriate service.
-#[derive(Debug, Clone)]
-pub struct ServiceRequest {
-    /// The request ID is a unique identifier for the request.
-    /// It is generated by the gateway and passed to the service manager.
-    /// The service manager will use this ID to track the request and its response.
-    pub req_id: u64,
-    /// The service to invoke
-    pub service: String,
-    /// The service provider/s to use.
-    pub src: Vec<String>,
-    /// The number of items to return
-    pub bulk: Option<usize>,
-    /// The encryption key to use for the service.
-    pub enc_key: Option<EncryptionKey>,
-    /// Arguments for the service in a vector of [(key, value), ...]
-    pub args: Option<Vec<(String, String)>>,
-}
-
-#[derive(Debug, Clone, PartialEq, Eq)]
-pub struct EncryptionKey {
-    pub key: String,
-    pub scheme: EncryptionScheme,
-}
-
-#[derive(Debug, Clone, PartialEq, Eq)]
-pub enum EncryptionScheme {
-    None,
-    Threshold,
-}
-
-impl EncryptionKey {
-    pub fn new(key: String, scheme: EncryptionScheme) -> Self {
-        EncryptionKey { key, scheme }
-    }
-
-    pub fn new_from_arg(arg: &str) -> Result<Self, GatewayError> {
-        let parts: Vec<&str> = arg.split('@').collect();
-        if parts.len() != 2 {
-            return Err(GatewayError::InvalidEncryptionKey);
-        }
-        let key = parts[1].to_string();
-        let scheme = match parts[0] {
-            "" => EncryptionScheme::None,
-            "threshold" => EncryptionScheme::Threshold,
-            x => return Err(GatewayError::InvalidEncryptionScheme(x.to_string())),
-        };
-        Ok(EncryptionKey { key, scheme })
-    }
-}
-
-/// ServiceResponse is the response from a service.
-/// It contains the request ID and the result of the service call.
-#[derive(Debug, Clone)]
-pub struct ServiceResponse {
-    pub req_id: u64,
-    pub result: Result<ServiceResult, GatewayError>,
 }
